# ImGUI-Template-With-BNM-Dobby

./: README.md  local.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  MainHeader.h  Utils.h  native-lib.cpp
app/src/main/cpp/ByNameModding/include/BNM/: Defaults.hpp
app/src/main/cpp/ByNameModding/include/BNM/UserSettings/: GlobalSettings.hpp
app/src/main/cpp/Misc/: FunctionPointers.h
app/src/main/cpp/Unity/: Input.h  Screen.h
app/src/main/java/com/unity/imgui/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
